# swarc

./: Cargo.toml  README.md
performance_tests/: README.md  benchmark.rs  plot_results.rs
src/: index.rs  insert.rs  lib.rs  main.rs  remove.rs  search.rs  types.rs
tests/: index_tests.rs  insert_tests.rs  integration_tests.rs  parallel_insert_tests.rs  remove_tests.rs  search_tests.rs  types_tests.rs
