[package]
name = "swarc"
version = "0.1.0"
edition = "2021"
description = "Small World Approximate Recall Crate - A high-performance HNSW implementation in Rust"
authors = ["Carlos Bertoncelli <cabertoncelli@gmail.com>"]
license = "MIT"
repository = "https://github.com/carlosbertoncelli/swarc"
keywords = ["hnsw", "nearest-neighbor", "search", "vector", "similarity"]
categories = ["algorithms", "data-structures"]

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
plotters = "0.3"
rayon = "1.8"
crossbeam = "0.8"
num_cpus = "1.0"

[[bin]]
name = "benchmark"
path = "performance_tests/benchmark.rs"

[[bin]]
name = "plot_results"
path = "performance_tests/plot_results.rs"
